--- a/public/signin.html
+++ b/public/signin.html
@@ -477,13 +477,10 @@
                                             console.log("no @ in email address");
                                         } else {
                                             //replace with Identify call
-                                            console.log("@ in email address, Heap Identify Call made");
+                                            console.log("@ in email address, Identify Call made");
                                             if (emailAddress != '') {
-                                                heap.identify(emailAddress);
-                                                // heap.addUserProperties({ "Account, Email Address": emailAddress });
-                                                heap.addUserProperties({
-                                                    "Account - Last Login": currentDateAndTime
-                                                });
+                                                //test.identify(emailAddress);
+                                                //test.addUserProperties({"Account - Last Login": currentDateAndTime});
                                             }
                                         }
                                         window.location.href = "/";
